language, main menu reduced but savings still not working, premium started

--- a/app/src/main/res/layout/activity_faqs.xml
+++ b/app/src/main/res/layout/activity_faqs.xml
@@ -23,7 +23,7 @@
         android:id="@+id/faqs_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FAQs"
+        android:text="@string/faqs"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
