--- a/app/src/main/res/layout/dialog_box_notification.xml
+++ b/app/src/main/res/layout/dialog_box_notification.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Notification Details"
+                android:text="@string/notification_details"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
