--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,3 +1,3 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="my_images" path="Android/data/com.example.smartstackbills/files/Pictures" />
+    <external-path name="my_images" path="Android/data/com.ritter.smartstackbills/files/Pictures" />
 </paths>
