--- a/app/src/main/res/layout/activity_create_income.xml
+++ b/app/src/main/res/layout/activity_create_income.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +8,7 @@
     android:background="@drawable/background_blue1"
     tools:context=".createIncome">
 
-    <!-- Vertical Guideline -->
+    <!-- Vertical Guidelines -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineStart"
         android:layout_width="wrap_content"
@@ -22,209 +23,188 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="32dp" />
 
-    <!-- Title -->
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/create_new_income"
-        android:textStyle="bold"
-        android:textSize="24sp"
+    <!-- Scrollable Content -->
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnCancelIncome"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/txtLabelTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/title"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-    <!-- Income Title (Required) -->
-    <EditText
-        android:id="@+id/edtTitleIncome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_frame_background_blue"
-        android:hint="@string/write_your_title"
-        android:inputType="text"
-        android:maxLength="30"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:textColorHint="#A5A5A5"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
-        app:layout_constraintTop_toBottomOf="@+id/txtLabelTitle" />
+            <!-- Title -->
+            <TextView
+                android:id="@+id/textViewTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/create_new_income"
+                android:textStyle="bold"
+                android:textSize="24sp"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="16dp" />
 
-    <!-- Amount (Required) -->
-    <TextView
-        android:id="@+id/txtAmountIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/amount"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/edtTitleIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+            <!-- Title Section -->
+            <TextView
+                android:id="@+id/txtLabelTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/title"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginTop="16dp" />
 
-    <EditText
-        android:id="@+id/edtAmountIncome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_frame_background_blue"
-        android:hint="@string/amount"
-        android:inputType="numberDecimal"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:textColorHint="#A5A5A5"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/txtAmountIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
+            <EditText
+                android:id="@+id/edtTitleIncome"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_frame_background_blue"
+                android:hint="@string/write_your_title"
+                android:maxLength="30"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColorHint="#A5A5A5"
+                android:textSize="15sp" />
 
-    <!-- Date (Required) -->
-    <TextView
-        android:id="@+id/txtDateIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/date"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/edtAmountIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+            <!-- Amount Section -->
+            <TextView
+                android:id="@+id/txtAmountIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/amount"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp" />
 
-    <EditText
-        android:id="@+id/edtDateIncome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_frame_background_blue"
-        android:hint="@string/income_date"
-        android:inputType="text"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:textColorHint="#A5A5A5"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/txtDateIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
+            <EditText
+                android:id="@+id/edtAmountIncome"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_frame_background_blue"
+                android:hint="@string/amount"
+                android:inputType="numberDecimal"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColorHint="#A5A5A5"
+                android:textSize="15sp" />
 
-    <!-- Category -->
-    <TextView
-        android:id="@+id/txtCategoryIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/category"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/edtDateIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+            <!-- Date Section -->
+            <TextView
+                android:id="@+id/txtDateIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/date"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp" />
 
-    <Spinner
-        android:id="@+id/spinnerCategoriesIncome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_frame_background_blue"
-        app:layout_constraintTop_toBottomOf="@+id/txtCategoryIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
+            <EditText
+                android:id="@+id/edtDateIncome"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_frame_background_blue"
+                android:hint="@string/income_date"
+                android:inputType="text"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColorHint="#A5A5A5"
+                android:textSize="15sp" />
 
-    <!-- Subcategory -->
-    <TextView
-        android:id="@+id/txtSubcategoryIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/subcategory"
+            <!-- Category Section -->
+            <TextView
+                android:id="@+id/txtCategoryIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/category"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp" />
 
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriesIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+            <Spinner
+                android:id="@+id/spinnerCategoriesIncome"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_frame_background_blue" />
 
-    <Spinner
-        android:id="@+id/spinnerSubcategoriesIncome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_frame_background_blue"
-        app:layout_constraintTop_toBottomOf="@+id/txtSubcategoryIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
+            <!-- Subcategory Section -->
+            <TextView
+                android:id="@+id/txtSubcategoryIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/subcategory"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp" />
 
-    <!-- Repeat -->
-    <TextView
-        android:id="@+id/txtRepeatIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/repeat"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerSubcategoriesIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+            <Spinner
+                android:id="@+id/spinnerSubcategoriesIncome"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_frame_background_blue" />
 
-    <Spinner
-        android:id="@+id/spinnerRepeatIncome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_frame_background_blue"
-        app:layout_constraintTop_toBottomOf="@+id/txtRepeatIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
+            <!-- Repeat Section -->
+            <TextView
+                android:id="@+id/txtRepeatIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/repeat"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp" />
 
-    <!-- Comment -->
-    <TextView
-        android:id="@+id/txtCommentIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/comments"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerRepeatIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+            <Spinner
+                android:id="@+id/spinnerRepeatIncome"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_frame_background_blue" />
 
-    <EditText
-        android:id="@+id/edtCommentIncome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_frame_background_blue"
-        android:hint="@string/write_your_comments"
-        android:inputType="text"
-        android:maxLength="30"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:textColorHint="#A5A5A5"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/txtCommentIncome"
-        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
-        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
+            <!-- Comment Section -->
+            <TextView
+                android:id="@+id/txtCommentIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/comments"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp" />
 
-    <!-- Buttons -->
+            <EditText
+                android:id="@+id/edtCommentIncome"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_frame_background_blue"
+                android:hint="@string/write_your_comments"
+                android:maxLength="30"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColorHint="#A5A5A5"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+    </ScrollView>
+
+    <!-- Save and Cancel Buttons -->
     <Button
         android:id="@+id/btnCancelIncome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btnlog"
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -237,7 +217,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btnlogin"
         android:text="@string/save"
         android:textColor="@color/white"
